# manwe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  camera_view.py  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INTEGRATION_CREBAIN.md  MODEL_CONTRACTS.md  RELEASING.md
docs/research/: README.md  SOTA-2026.md  sota-2026-structured.json
metal-yolo-tests/: .gitignore  BenchmarkCoreML.swift  Cargo.toml  LICENSE  README.md  benchmark_rtsp.py  export_coreml_fp32.py  generate_benchmark_videos.py  package.json  performance_test_mps.py  plot_benchmark_results.py  plot_results.py  plot_video_results.py  run_benchmark_suite.sh  run_benchmarks.sh  run_video_suite.sh
metal-yolo-tests/src/: benchmark_video.rs  lib.rs  main.rs  model.rs  orchestrate_benchmarks.rs  performance_test.rs  stream_simulation.rs
metal-yolo-tests/tests/: file_limit_exec.rs
python/: LICENSE  README.md  pyproject.toml
python/configs/audio/: seld.yaml
python/configs/fusion/: tracker.yaml
python/configs/multicam/: rig.example.yaml
python/configs/vision/: aerial.yaml  data.example.yaml
python/src/manwe/: __init__.py  _version.py  cli.py
python/src/manwe/audio/: __init__.py  detect.py  doa.py  features.py
python/src/manwe/common/: __init__.py  artifacts.py  config_io.py  contracts.py  dataset_manifest.py  deps.py  device.py  fd_io.py  logging.py  numeric.py  secret_scan.py  seed.py  ultralytics.py
python/src/manwe/data/: __init__.py  datasets.py  synthetic.py
python/src/manwe/eval/: __init__.py  benchmark.py  detection.py
python/src/manwe/export/: __init__.py  backends.py  contract.py  fidelity.py
python/src/manwe/fusion/: __init__.py  association.py  filters.py  metrics.py  scenarios.py  tracker.py
python/src/manwe/multicam/: __init__.py  camera.py  tracking.py  triangulation.py
python/src/manwe/vision/: __init__.py  input.py  models.py  postprocess.py  predict.py  sahi_infer.py  train.py
python/tests/: conftest.py  test_artifact_descriptor_streaming.py  test_atomic_export_publication.py  test_audio_doa.py  test_cli_errors.py  test_config_contracts.py  test_contract_metric_regressions.py  test_contracts.py  test_data_synthetic.py  test_dataset_manifest_cleanup.py  test_eval_detection.py  test_export_and_cli.py  test_fd_io.py  test_fusion_filters.py  test_fusion_tracker.py  test_fusion_tracker_admission.py  test_metrics_and_bridges.py  test_multicam.py  test_multicam_numeric_admission.py  test_remaining_numeric_boundaries.py  test_review_regressions.py  test_runtime_boundaries.py  test_secret_scanner.py  test_vision_postprocess.py
scripts/: check_secrets.py
src/: coco_classes.rs  lib.rs  main.rs  model.rs  secure_io.rs  stream_url.rs
