[package]
name = "manwe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
candle = { package = "candle-core", version = "0.8.4", features = ["metal"] }
candle-nn = { version = "0.8.4", features = ["metal"] }
candle-transformers = { version = "0.8.4", features = ["metal"] }
clap = { version = "4.4", features = ["derive"] }
image = "0.25"
hf-hub = "0.3"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
# opencv removed
bevy = { version = "0.13", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_asset", "x11", "wayland", "tonemapping_luts", "default_font"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ab_glyph = "0.2"
imageproc = "0.25"
rand = "=0.8.5"

[[bin]]
name = "camera_view"
path = "src/bin/camera_view.rs"

[[bin]]
name = "launcher"
path = "src/bin/launcher.rs"
