[package]
name = "manwe"
version = "0.2.0-alpha.1"
edition = "2021"
# Floor set by Bevy 0.19 (rust-version = 1.95.0), reached through the optional
# `viewer` feature. Candle 0.11 independently requires 1.94 on aarch64 and
# imageproc 0.27 requires 1.89; Cargo declares one floor per package, so the
# highest of the three is the declared floor.
rust-version = "1.95"
publish = false
license = "MIT"
description = "Rust/Candle inference and benchmarking tools for the Manwe perception workbench"
repository = "https://github.com/sepahead/manwe"

[features]
default = []
metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
viewer = ["dep:bevy"]

[dependencies]
anyhow = "1.0"
# Candle 0.11 carries one unavoidable cost, accepted deliberately: candle-core
# declares `tokenizers` (features = ["onig"]) as a NON-optional dependency for
# every non-wasm target, so the tokenizer/Oniguruma stack is linked even though
# this binary is vision-only. No feature gate drops it and `default-features =
# false` does not help; onig_sys additionally builds a C library, so the graph now
# carries a native build step and every build environment needs a C toolchain.
# Candle's aarch64 NEON path uses `float16x8_t` (`stdarch_neon_f16`), stable since
# 1.94 and therefore below the 1.95 floor Bevy already sets. Candle 0.11 rewrote
# its Metal backend onto objc2-metal. This repository has no digest-bound golden
# model-forward fixture, so it makes no CPU/Metal numerical-equivalence claim for
# this upgrade; validate the exact graph and artifact on each target device.
candle = { package = "candle-core", version = "0.11.0", default-features = false }
candle-nn = { version = "0.11.0", default-features = false }
candle-transformers = { version = "0.11.0", default-features = false }
# Keep the CLI parser family exact so lock regeneration cannot silently change
# accepted command syntax or the compiler floor. That risk is demonstrated, not
# theoretical: clap 4.6.0 raised its own MSRV in a *minor* release, so a caret
# range admits a future 4.x that moves the floor again. 4.6.1 parses this CLI
# identically to 4.5.57; its only change is a derive-time rebuild fix.
clap = { version = "=4.6.2", features = ["derive", "env"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
# The viewer is experimental and tracks Bevy 0.19, which declares Rust 1.95 and so
# sets this crate's floor. `default-features = false` no longer implies
# `std`/`async_executor` on this line; 0.19 split sprite rendering out of
# `bevy_sprite` into `bevy_sprite_render` (both are required for the viewer to draw
# anything); `bevy_log` became opt-in (0.13 always linked it, and the launcher
# forwards RUST_LOG to it); and `tonemapping_luts` now demands an explicit zstd
# backend, where `zstd_rust` keeps the build free of a C toolchain.
bevy = { version = "0.19", optional = true, default-features = false, features = ["std", "async_executor", "bevy_log", "bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_sprite_render", "bevy_asset", "tonemapping_luts", "zstd_rust", "default_font"] }
ab_glyph = "0.2"
# imageproc 0.27 declares Rust 1.87, but it takes a *mandatory* nalgebra 0.35
# dependency whose own rust-version is 1.89.0 (nalgebra -> simba -> wide 1.5, also
# 1.89). nalgebra is not optional, so 0.27 cannot be had below 1.89. `draw_text_mut`
# moved behind the `text` feature in this line, so it is enabled explicitly.
imageproc = { version = "0.27.0", default-features = false, features = ["text"] }
libc = "0.2"
# sha2 0.11 (digest 0.11) replaces generic-array with hybrid-array, whose fixed
# output no longer implements LowerHex; every digest is rendered by the single
# audited `secure_io::sha256_hex`. Default features would add `oid`, pulling
# const-oid purely for ASN.1 identifiers this workspace never emits.
sha2 = { version = "0.11", default-features = false }

[[bin]]
name = "camera_view"
path = "src/bin/camera_view.rs"
required-features = ["viewer"]

[[bin]]
name = "launcher"
path = "src/bin/launcher.rs"
required-features = ["viewer"]

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
perf = { level = "deny", priority = 9 }
