[package]
name = "candle_demo_yolov8"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"

# Enable the Metal backend for Candle (latest version)
candle = { package = "candle-core", version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }


clap = { version = "4.5.37", features = ["derive"] }
hf-hub = "0.4.1"
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.25.0", default-features = false }
rusttype = "0.9.3"
tokenizers = "0.21.0"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
ab_glyph = "0.2.25"
serde_plain = "1.0.2"
serde_json = "1.0.99"

[[bin]]
name = "performance_test"
path = "src/performance_test.rs"

[[bin]]
name = "orchestrate_benchmarks"
path = "src/orchestrate_benchmarks.rs"

[[bin]]
name = "benchmark_video"
path = "src/benchmark_video.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
