[package]
name = "manwe-benchmarks"
version = "0.2.0-alpha.1"
edition = "2021"
rust-version = "1.88"
license = "MIT"
publish = false
autobins = false

[dependencies]
anyhow = "1.0"
# Keep this synchronized with the root crate's MSRV-compatible Candle line.
candle = { package = "candle-core", version = "0.9.2", default-features = false, features = ["metal"] }
candle-nn = { version = "0.9.2", default-features = false, features = ["metal"] }
candle-transformers = { version = "0.9.2", default-features = false, features = ["metal"] }
clap = { version = "=4.5.57", features = ["derive"] }
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png"] }
# Keep this on the root crate's Rust-1.88-compatible imageproc line.
imageproc = { version = "0.25.1", default-features = false }
manwe = { path = "..", version = "=0.2.0-alpha.1", features = ["metal"] }
serde_json = "1.0"
sha2 = "0.11"

[[bin]]
name = "performance_test"
path = "src/performance_test.rs"

[[bin]]
name = "benchmark_video"
path = "src/benchmark_video.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
perf = { level = "deny", priority = 9 }
